# autograd-engine-from-scratch

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  concepts_review.md
examples/: __init__.py  run_all.py  train_mnist_cnn.py  train_mnist_mlp.py  train_regression.py  train_spiral.py  train_xor.py
reports/: mnist_cnn_experiment.md  mnist_mlp_experiment.md  project_summary.md  regression_experiment.md  results_summary.md  spiral_experiment.md  xor_experiment.md
src/autograd_engine/: __init__.py  datasets.py  gradcheck.py  losses.py  metrics.py  nn.py  optim.py  scalar.py  serialization.py  tensor.py  training.py
tests/: test_cnn.py  test_datasets.py  test_gradcheck.py  test_losses.py  test_metrics.py  test_mnist_smoke.py  test_nn.py  test_optim.py  test_scalar.py  test_serialization.py  test_smoke.py  test_spiral_smoke.py  test_tensor.py  test_tensor_shape_ops.py  test_training.py  test_training_smoke.py
