[project]
name = "autograd-engine-from-scratch"
version = "0.1.0"
description = "NumPy-based autograd engine and tiny neural network library from scratch."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
